--- a/EricssonDialer/DialerLibrary/src/main/res/layout/fragment_dialer.xml
+++ b/EricssonDialer/DialerLibrary/src/main/res/layout/fragment_dialer.xml
@@ -61,7 +61,7 @@
 
                 <RelativeLayout
                     android:id="@+id/DIAL_numLayout1"
-                    
+
                     android:padding="4dp"
                     android:layout_weight="1"
                     android:layout_width="100dp"
@@ -382,58 +382,73 @@
             </LinearLayout>
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_below="@id/DIAL_bottom"
-            android:layout_margin="4dp"
+            android:padding="12dp"
+            android:gravity="left|center"
+            android:background="@color/beige_pale"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/DIAL_btnCallNormal"
-                android:src="@drawable/phone_black48"
-                android:drawableLeft="@drawable/phone_black48"
-                android:padding="12dp"
-                style="@style/btnStyleGenoa"
-                android:text="@string/normal_call"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/DIAL_btnCallPay4Me"
-                android:drawableLeft="@drawable/phone_red48"
-                android:padding="12dp"
-                style="@style/btnStyleOrange"
-                android:text="@string/pay4me"
-                android:visibility="gone"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:id="@+id/DIAL_layoutPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/DIAL_btnCallNormal"
+                    android:src="@drawable/phone_black48"
+                    android:padding="12dp"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/DIAL_btnCallPay4Me"
+                    android:src="@drawable/phone_red48"
+                    android:padding="12dp"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <ImageView
+
+                android:src="@android:drawable/ic_menu_search"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <ImageView
                 android:id="@+id/DIAL_imgBackspace"
-                android:src="@android:drawable/ic_input_delete"
+                android:src="@android:drawable/ic_dialog_info"
                 android:layout_width="wrap_content"
                 android:background="@color/grey"
-                android:padding="4dp" android:visibility="gone"
+                android:padding="4dp"
+                android:visibility="visible"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_height="wrap_content" />
-        </RelativeLayout>
+        </LinearLayout>
 
 
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_marginRight="16dp"
         android:layout_marginTop="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/TOG_circle"
-        android:background="@drawable/red_dot"
-        android:text="ECC"
-        android:layout_alignParentRight="true"
-        android:gravity="center"
-        android:textColor="@color/yellow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/TOG_circle"
+            android:background="@drawable/red_dot"
+            android:text="ECC"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:textColor="@color/yellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </RelativeLayout>
