--- a/EricssonDialer/DialerLibrary/src/main/res/layout/toast_calling.xml
+++ b/EricssonDialer/DialerLibrary/src/main/res/layout/toast_calling.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="600dp"
+    android:layout_width="match_parent"
     android:background="@color/grey"
     android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/TC_image"
+        android:scaleType="centerCrop"
+        android:src="@drawable/mtn2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
     <RelativeLayout
         android:id="@+id/TC_top"
         android:padding="12dp"
+        android:layout_below="@id/TC_image"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -35,7 +42,7 @@
             android:id="@+id/TC_txtNumber"
             android:text="082 456 3767"
             style="@style/TextAppearance.AppCompat.Title"
-            android:textSize="40sp"
+            android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/green"
             android:layout_width="wrap_content"
